--- a/sample_posts/2018-06-30-demo-post.md
+++ b/sample_posts/2018-06-30-demo-post.md
@@ -3,6 +3,7 @@ title: 'Demo Post'
 date: 2018-06-30 00:00:00
 description: This page is a demo that shows everything you can do inside portfolio and blog posts.
 featured_image: '/images/demo/demo-square.jpg'
+tags: tag1 tag2
 ---
 
 ![](/images/demo/demo-landscape.jpg)
