--- a/_posts/2024-08-15-blue-film.md
+++ b/_posts/2024-08-15-blue-film.md
@@ -32,7 +32,7 @@ Below I will briefly summarize how negative film works, mechanically. A negative
 
 A negative to print process consists of two of these sorts of film stocks in series. First, something is photographed with a negative stock. The negative stock is then developed, which forms an inverted image. The developed negative is then displayed to a print stock that adheres to similar mechanics[^1] and therefore inverts the image again.
 
-[^1]: Print stocks do not use colored couplers, which are the system that makes negative stocks orange.
+[^1]: Print stocks do not use colored couplers (tinted mask couplers), which are the system that makes negative stocks orange while improving the sharpness of the negative's dye density curves. However, this does not affect the overall mechanics of film, nor does it affect the generality of the logic presented here.
 
 Reversal stocks (ie Slide film) are similar to negative film, except the chemistry during the development process binds dye to the unactivated grains and washes away the activated ones. Thus, more energy during the exposure results in less dye and therefore increased transmittance of the resulting film stock.
 
