swapped out one entry gallaries with ![]()

--- a/_posts/2024-08-15-blue-film.md
+++ b/_posts/2024-08-15-blue-film.md
@@ -9,9 +9,7 @@ tags: purity deep blue density transmittance saturated saturation LUT filmic
 
 There has been some discussion online as to how film should render exposure to blues and other colors. In this article, I will take you through some practical examples and some mistakes one can make that would lead to incorrect and ugly conclusions.
 
-<div class="gallery" data-columns="1">
-    <img src="/images/posts/blue_film/fourway_comparison0046.jpg">
-</div>
+![](/images/posts/blue_film/fourway_comparison0046.jpg)
 
 ---
 **Contents**
