fixed issue with title of charts being cropped off

--- a/notebooks/lut_linear.ipynb
+++ b/notebooks/lut_linear.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -156,19 +156,19 @@
     "plt.ylim(0, 1.05)\n",
     "plt.xlim(DOMAIN_MIN-1, DOMAIN_MAX * 1.05)\n",
     "plt.legend()\n",
-    "plt.savefig(f'../images/posts/lut_linear/plot_lut_vs_gt_size_{LUT_SIZE}_domain_max_{DOMAIN_MAX}.png', dpi=300)"
+    "plt.savefig(f'../images/posts/lut_linear/plot_lut_vs_gt_size_{LUT_SIZE}_domain_max_{DOMAIN_MAX}.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hq/hmwml30119vdrkc5_qz6t96w0000gn/T/ipykernel_52853/904684092.py:13: UserWarning: Attempt to set non-positive xlim on a log-scaled axis will be ignored.\n",
+      "/var/folders/hq/hmwml30119vdrkc5_qz6t96w0000gn/T/ipykernel_55629/4099837538.py:13: UserWarning: Attempt to set non-positive xlim on a log-scaled axis will be ignored.\n",
       "  plt.xlim(DOMAIN_MIN-1, DOMAIN_MAX * 1.05)\n"
      ]
     },
@@ -197,12 +197,12 @@
     "plt.xscale('log')\n",
     "plt.ylim(0, 1.05)\n",
     "plt.xlim(DOMAIN_MIN-1, DOMAIN_MAX * 1.05)\n",
-    "plt.savefig(f'../images/posts/lut_linear/plot_lut_vs_gt_size_{LUT_SIZE}_domain_max_{DOMAIN_MAX}_log.png', dpi=300)"
+    "plt.savefig(f'../images/posts/lut_linear/plot_lut_vs_gt_size_{LUT_SIZE}_domain_max_{DOMAIN_MAX}_log.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -229,19 +229,19 @@
     "plt.legend()\n",
     "plt.ylim(0, 1.05)\n",
     "plt.xlim(DOMAIN_MIN-1, DOMAIN_MAX * 1.05)\n",
-    "plt.savefig(f'../images/posts/lut_linear/plot_log_sampled_lut_vs_gt_size_{LUT_SIZE}_domain_max_{DOMAIN_MAX}.png', dpi=300)"
+    "plt.savefig(f'../images/posts/lut_linear/plot_log_sampled_lut_vs_gt_size_{LUT_SIZE}_domain_max_{DOMAIN_MAX}.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hq/hmwml30119vdrkc5_qz6t96w0000gn/T/ipykernel_52853/1628153219.py:13: UserWarning: Attempt to set non-positive xlim on a log-scaled axis will be ignored.\n",
+      "/var/folders/hq/hmwml30119vdrkc5_qz6t96w0000gn/T/ipykernel_55629/4256107108.py:13: UserWarning: Attempt to set non-positive xlim on a log-scaled axis will be ignored.\n",
       "  plt.xlim(DOMAIN_MIN-1, DOMAIN_MAX * 1.05)\n"
      ]
     },
@@ -270,22 +270,8 @@
     "plt.xscale('log')\n",
     "plt.ylim(0, 1.05)\n",
     "plt.xlim(DOMAIN_MIN-1, DOMAIN_MAX * 1.05)\n",
-    "plt.savefig(f'../images/posts/lut_linear/plot_log_sampled_lut_vs_gt_size_{LUT_SIZE}_domain_max_{DOMAIN_MAX}_log.png', dpi=300)"
+    "plt.savefig(f'../images/posts/lut_linear/plot_log_sampled_lut_vs_gt_size_{LUT_SIZE}_domain_max_{DOMAIN_MAX}_log.png', dpi=300, bbox_inches='tight')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
